--- a/src/Selenium.AutomatedTests.Core/Selenium.AutomatedTests.Core.csproj
+++ b/src/Selenium.AutomatedTests.Core/Selenium.AutomatedTests.Core.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
+    <PackageReference Include="Selenium.Support" Version="4.1.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.1.0" />
   </ItemGroup>
 
