--- a/Selenium.AutomatedTests.Samples/Selenium.AutomatedTests.Samples.csproj
+++ b/Selenium.AutomatedTests.Samples/Selenium.AutomatedTests.Samples.csproj
@@ -8,8 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
-    <PackageReference Include="NSubstitute" Version="4.2.2" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -22,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Selenium.AutomatedTests.Core\Selenium.AutomatedTests.Core.csproj" />
+    <ProjectReference Include="..\Selenium.AutomatedTests.Core\Selenium.AutomatedTests.Core.csproj" />
   </ItemGroup>
 
 </Project>
