--- a/Selenium.AutomatedTests.Core/Selenium.AutomatedTests.Core.csproj
+++ b/Selenium.AutomatedTests.Core/Selenium.AutomatedTests.Core.csproj
@@ -1,14 +1,31 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.1</TargetFramework>
+		<Nullable>enable</Nullable>
+		<AssemblyName>$(MSBuildProjectName)</AssemblyName>
+		<Version>0.1.0-alpha</Version>
+		<PackageId>Selenium.AutomatedTests.Core</PackageId>
+		<Title>Selenium.AutomatedTests.Core</Title>
+		<PackageDescription>Easily write maintainable end-to-end tests by writing scenarios in a fluent fashion</PackageDescription>
+		<PackageTags>Selenium;Testing;Acceptance testing;End-to-end;Automation</PackageTags>
+		<Description>
+			The aim of this package is to provide an easy way to write clear and explicit intention-revealing end-to-end tests, providing a builder to setup an automation scenario defined by steps.
+			It is agnostic from the testing framework, so it can be used indifferently with xUnit, NUnit, etc
 
-  <ItemGroup>
-    <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
-    <PackageReference Include="Selenium.Support" Version="4.1.0" />
-    <PackageReference Include="Selenium.WebDriver" Version="4.1.0" />
-  </ItemGroup>
+			Release notes - https://github.com/pablocom/Selenium.AutomatedTests.Core/releases
+		</Description>
+		<PackageLicenseFile>LICENSE</PackageLicenseFile>
+		<Authors>pablocom</Authors>
+	</PropertyGroup>
 
+	<ItemGroup>
+		<PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
+		<PackageReference Include="Selenium.Support" Version="4.1.0" />
+		<PackageReference Include="Selenium.WebDriver" Version="4.1.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Include="../LICENSE" Pack="true" PackagePath=""/>
+	</ItemGroup>
 </Project>
