--- a/Selenium.AutomatedTests.Core.UnitTests/Selenium.AutomatedTests.UnitTests.csproj
+++ b/Selenium.AutomatedTests.Core.UnitTests/Selenium.AutomatedTests.UnitTests.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
+    <PackageReference Include="NSubstitute" Version="4.2.2" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -21,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Selenium.AutomatedTests.Core\Selenium.AutomatedTests.Core.csproj" />
+    <ProjectReference Include="..\Selenium.AutomatedTests.Core\Selenium.AutomatedTests.csproj" />
   </ItemGroup>
 
 </Project>
