--- a/Selenium.AutomatedTests.Core/Selenium.AutomatedTests.csproj
+++ b/Selenium.AutomatedTests.Core/Selenium.AutomatedTests.csproj
@@ -4,19 +4,20 @@
 		<TargetFramework>netstandard2.1</TargetFramework>
 		<Nullable>enable</Nullable>
 		<AssemblyName>$(MSBuildProjectName)</AssemblyName>
-		<Version>0.1.0-alpha</Version>
-		<PackageId>Selenium.AutomatedTests.Core</PackageId>
-		<Title>Selenium.AutomatedTests.Core</Title>
+		<Version>0.1.4-alpha</Version>
+		<PackageId>Selenium.AutomatedTests</PackageId>
+		<Title>Selenium.AutomatedTests</Title>
 		<PackageDescription>Easily write maintainable end-to-end tests by writing scenarios in a fluent fashion</PackageDescription>
 		<PackageTags>Selenium;Testing;Acceptance testing;End-to-end;Automation</PackageTags>
 		<Description>
 			The aim of this package is to provide an easy way to write clear and explicit intention-revealing end-to-end tests, providing a builder to setup an automation scenario defined by steps.
 			It is agnostic from the testing framework, so it can be used indifferently with xUnit, NUnit, etc
 
-			Release notes - https://github.com/pablocom/Selenium.AutomatedTests.Core/releases
+			Release notes - https://github.com/pablocom/Selenium.AutomatedTests/releases
 		</Description>
 		<PackageLicenseFile>LICENSE</PackageLicenseFile>
 		<Authors>pablocom</Authors>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 	</PropertyGroup>
 
 	<ItemGroup>
