--- a/Selenium.AutomatedTests/Selenium.AutomatedTests.csproj
+++ b/Selenium.AutomatedTests/Selenium.AutomatedTests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netstandard2.1</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<AssemblyName>$(MSBuildProjectName)</AssemblyName>
 		<Version>0.1.4</Version>
@@ -27,6 +27,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Include="../LICENSE" Pack="true" PackagePath=""/>
+		<None Include="../LICENSE" Pack="true" PackagePath="" />
 	</ItemGroup>
 </Project>
